--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="%BASE_URL%manifest.webmanifest" />
+
+    <!-- Installability / iOS "Add to Home Screen" -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Who's a Wolf" />
+    <link rel="apple-touch-icon" href="%BASE_URL%images/characters/Alice_neutral.jpg" />
+
+    <!-- Icons -->
+    <link rel="icon" type="image/png" sizes="64x64" href="%BASE_URL%favicon.png" />
+    <link rel="icon" type="image/jpeg" href="%BASE_URL%images/characters/Alice_neutral.jpg" />
+    <link rel="icon" type="image/svg+xml" href="%BASE_URL%favicon.svg" />
+
+    <meta name="theme-color" content="#0b0b0b" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Who's a Wolf</title>
     <!-- Preload fonts -->
